Finalise first version of new frontend
Progress

Progress

Progress

Progress

Progress

Progress

Progress

Progress

Progress

Progres

Progress